--- a/pages/19934.html
+++ b/pages/19934.html
@@ -564,7 +564,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#noncompact_orbifolds'>Non-compact orbifolds</a></li>
 <li><a href='#FlatCompact2DimensionalOrbifolds'>Flat compact 2-dimensional orbifolds</a></li>
-<li><a href='#flat_compact_4dimensional_orbifolds'>Flat compact 4-dimensional orbifolds</a></li>
+<li><a href='#FlatCompact4dOrbifolds'>Flat compact 4-dimensional orbifolds</a></li>
 <li><a href='#flat_compact_6dimensional_orbifolds'>Flat compact 6-dimensional orbifolds</a></li>
 <li><a href='#7dimensional_orbifolds'>7-Dimensional <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-orbifolds</a></li>
 </ul>
@@ -618,9 +618,15 @@ margin-left: 0em;
 <p>graphics grabbed from <a href="#BettiolDerdzinskiPiccione18">Bettiol-Derdzinski-Piccione 18</a></p>
 </blockquote>
 
-<h3 id="flat_compact_4dimensional_orbifolds">Flat compact 4-dimensional orbifolds</h3>
+<h3 id="FlatCompact4dOrbifolds">Flat compact 4-dimensional orbifolds</h3>
 
 <p>The orbifold quotient of the <a class="existingWikiWord" href="/nlab/show/4-torus">4-torus</a> by the sign <a class="existingWikiWord" href="/nlab/show/involution">involution</a> on all four canonical <a class="existingWikiWord" href="/nlab/show/coordinates">coordinates</a> is the flat compact 4-dimensional orbifold known as the <em><a class="existingWikiWord" href="/nlab/show/Kummer+surface">Kummer surface</a></em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>T</mi> <mn>4</mn></msup><mo>⫽</mo><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">T^4 \sslash \mathbb{Z}_2</annotation></semantics></math>, a singular <a class="existingWikiWord" href="/nlab/show/K3-surface">K3-surface</a> (e.g. <a href="#BettiolDerdzinskiPiccione18">Bettiol-Derdzinski-Piccione 18, 5.5</a>)</p>
+<div style="text-align: center">
+<img src="https://ncatlab.org/nlab/files/KummerSingular.jpg" width="300" />
+</div>
+<blockquote>
+<p>graphics grabbed from <a href="orbifold#Snowden11">Snowden 11</a></p>
+</blockquote>
 
 <h3 id="flat_compact_6dimensional_orbifolds">Flat compact 6-dimensional orbifolds</h3>
 
@@ -731,14 +737,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 12, 2019 at 13:35:00.
+  Last revised on January 13, 2019 at 13:15:24.
   See the <a href="https://ncatlab.org/nlab/history/Riemannian orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Riemannian orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
