--- a/pages/900.html
+++ b/pages/900.html
@@ -618,11 +618,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Jean-Marc+Cordier">Jean-Marc Cordier</a>, <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>, <em>Shape Theory</em>, categorical methods of approximation, Dover (2008) (This is a reprint of the 1989 edition without amendments.)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Jean-Marc+Cordier">Jean-Marc Cordier</a>, and <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>, <em>Shape Theory</em>, categorical methods of approximation, Dover (2008) (This is a reprint of the 1989 edition without amendments.)</p>
 </li>
 
 <li id="KashiwaraSchapira06">
-<p><a class="existingWikiWord" href="/nlab/show/Masaki+Kashiwara">Masaki Kashiwara</a>, <a class="existingWikiWord" href="/nlab/show/Pierre+Schapira">Pierre Schapira</a>, section 6 of <em><a class="existingWikiWord" href="/nlab/show/Categories+and+Sheaves">Categories and Sheaves</a></em>, Grundlehren der mathematischen Wissenschaften 332 (2006)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Masaki+Kashiwara">Masaki Kashiwara</a>, and <a class="existingWikiWord" href="/nlab/show/Pierre+Schapira">Pierre Schapira</a>, section 6 of <em><a class="existingWikiWord" href="/nlab/show/Categories+and+Sheaves">Categories and Sheaves</a></em>, Grundlehren der mathematischen Wissenschaften 332 (2006)</p>
 </li>
 
 <li>
@@ -661,14 +661,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 14, 2019 at 03:45:47.
+  Last revised on January 14, 2019 at 05:23:23.
   See the <a href="https://ncatlab.org/nlab/history/pro-object" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/pro-object" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pro-object/47" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(47 revisions)</span> | <a href="/nlab/show/diff/pro-object" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pro-object" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/pro-object" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/pro-object/48" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(48 revisions)</span> | <a href="/nlab/show/diff/pro-object" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/pro-object" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/pro-object/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
