--- a/pages/1788.html
+++ b/pages/1788.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -484,20 +484,63 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/files/Spaces+as+infinity-groupoids.pdf" title="">Spaces as infinity-groupoids.pdf</a></p>
 
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="0em" rspace="thinmathspace">&#x283;</mo><mn>22</mn></mrow><annotation encoding="application/x-tex">\esh 22</annotation></semantics></math></p>
-</body></html>
+<svg xmlns:xlink="http://www.w3.org/1999/xlink" width="138.669pt" height="21.774pt" viewBox="0 0 138.669 21.774" version="1.1" xmlns="http://www.w3.org/2000/svg">
+<defs>
+<g>
+<symbol overflow="visible" id="glyph0-0">
+<path style="stroke:none;" d=""></path>
+</symbol>
+<symbol overflow="visible" id="glyph0-1">
+<path style="stroke:none;" d="M 6.046875 -4.75 C 6.109375 -4.921875 6.109375 -4.9375 6.109375 -5.03125 C 6.109375 -5.25 5.921875 -5.375 5.734375 -5.375 C 5.609375 -5.375 5.421875 -5.296875 5.3125 -5.109375 C 5.28125 -5.046875 5.1875 -4.65625 5.125 -4.4375 C 5.046875 -4.109375 4.953125 -3.765625 4.875 -3.4375 L 4.328125 -1.203125 C 4.265625 -1.015625 3.734375 -0.140625 2.90625 -0.140625 C 2.28125 -0.140625 2.140625 -0.6875 2.140625 -1.140625 C 2.140625 -1.71875 2.359375 -2.484375 2.78125 -3.59375 C 2.96875 -4.09375 3.03125 -4.234375 3.03125 -4.484375 C 3.03125 -5.046875 2.625 -5.5 2 -5.5 C 0.828125 -5.5 0.359375 -3.703125 0.359375 -3.59375 C 0.359375 -3.46875 0.484375 -3.46875 0.515625 -3.46875 C 0.640625 -3.46875 0.640625 -3.484375 0.703125 -3.6875 C 1.046875 -4.859375 1.546875 -5.234375 1.96875 -5.234375 C 2.0625 -5.234375 2.28125 -5.234375 2.28125 -4.828125 C 2.28125 -4.515625 2.15625 -4.203125 2.0625 -3.953125 C 1.5625 -2.640625 1.34375 -1.9375 1.34375 -1.34375 C 1.34375 -0.234375 2.125 0.140625 2.859375 0.140625 C 3.34375 0.140625 3.765625 -0.078125 4.125 -0.421875 C 3.953125 0.21875 3.8125 0.828125 3.3125 1.5 C 2.984375 1.921875 2.515625 2.28125 1.9375 2.28125 C 1.765625 2.28125 1.203125 2.234375 1 1.75 C 1.203125 1.75 1.359375 1.75 1.53125 1.609375 C 1.65625 1.5 1.78125 1.328125 1.78125 1.09375 C 1.78125 0.703125 1.4375 0.65625 1.3125 0.65625 C 1.03125 0.65625 0.625 0.859375 0.625 1.46875 C 0.625 2.09375 1.171875 2.546875 1.9375 2.546875 C 3.21875 2.546875 4.515625 1.421875 4.859375 0.015625 Z M 6.046875 -4.75 "></path>
+</symbol>
+<symbol overflow="visible" id="glyph0-2">
+<path style="stroke:none;" d="M 4.65625 -7.53125 C 4.765625 -7.984375 4.8125 -8.125 5.984375 -8.125 C 6.34375 -8.125 6.453125 -8.125 6.453125 -8.359375 C 6.453125 -8.5 6.3125 -8.5 6.25 -8.5 C 5.84375 -8.5 4.8125 -8.46875 4.40625 -8.46875 C 4.03125 -8.46875 3.125 -8.5 2.75 -8.5 C 2.671875 -8.5 2.515625 -8.5 2.515625 -8.25 C 2.515625 -8.125 2.625 -8.125 2.859375 -8.125 C 2.890625 -8.125 3.125 -8.125 3.34375 -8.09375 C 3.5625 -8.0625 3.671875 -8.0625 3.671875 -7.890625 C 3.671875 -7.84375 3.65625 -7.8125 3.625 -7.65625 L 1.953125 -0.96875 C 1.828125 -0.484375 1.8125 -0.390625 0.828125 -0.390625 C 0.609375 -0.390625 0.484375 -0.390625 0.484375 -0.140625 C 0.484375 0 0.59375 0 0.828125 0 L 6.59375 0 C 6.890625 0 6.90625 0 6.96875 -0.21875 L 7.953125 -2.90625 C 8 -3.03125 8 -3.0625 8 -3.078125 C 8 -3.125 7.96875 -3.21875 7.859375 -3.21875 C 7.75 -3.21875 7.734375 -3.15625 7.640625 -2.953125 C 7.21875 -1.8125 6.671875 -0.390625 4.515625 -0.390625 L 3.34375 -0.390625 C 3.171875 -0.390625 3.15625 -0.390625 3.078125 -0.40625 C 2.953125 -0.40625 2.90625 -0.421875 2.90625 -0.515625 C 2.90625 -0.5625 2.90625 -0.578125 2.96875 -0.8125 Z M 4.65625 -7.53125 "></path>
+</symbol>
+<symbol overflow="visible" id="glyph1-0">
+<path style="stroke:none;" d=""></path>
+</symbol>
+<symbol overflow="visible" id="glyph1-1">
+<path style="stroke:none;" d="M 4.875 -2.375 C 4.9375 -2.609375 4.9375 -2.65625 4.9375 -2.84375 C 4.9375 -2.984375 4.9375 -3.359375 4.625 -3.609375 C 4.46875 -3.71875 4.21875 -3.84375 3.8125 -3.84375 C 3.4375 -3.84375 2.90625 -3.75 2.34375 -3.0625 C 2.28125 -3.71875 1.6875 -3.84375 1.40625 -3.84375 C 1.078125 -3.84375 0.859375 -3.625 0.71875 -3.390625 C 0.546875 -3.09375 0.40625 -2.5625 0.40625 -2.515625 C 0.40625 -2.390625 0.53125 -2.390625 0.5625 -2.390625 C 0.6875 -2.390625 0.6875 -2.421875 0.75 -2.65625 C 0.875 -3.171875 1.046875 -3.59375 1.390625 -3.59375 C 1.609375 -3.59375 1.671875 -3.40625 1.671875 -3.171875 C 1.671875 -3.015625 1.59375 -2.6875 1.53125 -2.453125 C 1.46875 -2.21875 1.390625 -1.859375 1.34375 -1.671875 L 1.0625 -0.546875 C 1.03125 -0.4375 0.96875 -0.21875 0.96875 -0.1875 C 0.96875 0 1.140625 0.09375 1.265625 0.09375 C 1.4375 0.09375 1.5625 -0.03125 1.609375 -0.109375 C 1.65625 -0.1875 1.71875 -0.46875 1.765625 -0.640625 C 1.8125 -0.8125 1.90625 -1.21875 1.96875 -1.4375 C 2.015625 -1.625 2.0625 -1.8125 2.109375 -2.015625 C 2.203125 -2.390625 2.203125 -2.40625 2.375 -2.671875 C 2.65625 -3.109375 3.09375 -3.59375 3.78125 -3.59375 C 4.265625 -3.59375 4.296875 -3.203125 4.296875 -2.984375 C 4.296875 -2.75 4.265625 -2.671875 4.234375 -2.515625 L 3.25 1.40625 C 3.203125 1.53125 3.203125 1.578125 3.203125 1.59375 C 3.203125 1.78125 3.359375 1.859375 3.5 1.859375 C 3.8125 1.859375 3.890625 1.5625 3.921875 1.453125 Z M 4.875 -2.375 "></path>
+</symbol>
+<symbol overflow="visible" id="glyph2-0">
+<path style="stroke:none;" d=""></path>
+</symbol>
+<symbol overflow="visible" id="glyph2-1">
+<path style="stroke:none;" d="M 4.125 -2.328125 C 4.15625 -2.421875 4.15625 -2.46875 4.15625 -2.46875 C 4.15625 -2.609375 4.046875 -2.6875 3.921875 -2.6875 C 3.671875 -2.6875 3.625 -2.46875 3.578125 -2.296875 L 3.453125 -1.78125 L 3.25 -1 C 3.234375 -0.921875 3.203125 -0.796875 3.1875 -0.75 C 3.1875 -0.734375 2.84375 -0.140625 2.3125 -0.140625 C 2.03125 -0.140625 1.8125 -0.28125 1.8125 -0.671875 C 1.8125 -1.015625 2 -1.484375 2.171875 -1.921875 C 2.203125 -2 2.25 -2.09375 2.25 -2.203125 C 2.25 -2.515625 1.953125 -2.75 1.578125 -2.75 C 0.921875 -2.75 0.5625 -1.953125 0.5625 -1.796875 C 0.5625 -1.703125 0.671875 -1.703125 0.703125 -1.703125 C 0.796875 -1.703125 0.8125 -1.734375 0.84375 -1.828125 C 0.96875 -2.25 1.265625 -2.546875 1.546875 -2.546875 C 1.671875 -2.546875 1.734375 -2.46875 1.734375 -2.3125 C 1.734375 -2.1875 1.703125 -2.09375 1.65625 -1.984375 C 1.34375 -1.234375 1.296875 -1.015625 1.296875 -0.765625 C 1.296875 -0.078125 1.875 0.0625 2.28125 0.0625 C 2.640625 0.0625 2.90625 -0.109375 3.0625 -0.234375 C 2.96875 0.109375 2.90625 0.390625 2.609375 0.6875 C 2.46875 0.828125 2.171875 1.0625 1.796875 1.0625 C 1.671875 1.0625 1.453125 1.046875 1.296875 0.921875 C 1.578125 0.84375 1.609375 0.609375 1.609375 0.546875 C 1.609375 0.359375 1.46875 0.28125 1.34375 0.28125 C 1.15625 0.28125 0.953125 0.4375 0.953125 0.71875 C 0.953125 1.03125 1.265625 1.28125 1.796875 1.28125 C 2.5 1.28125 3.34375 0.796875 3.546875 0 Z M 4.125 -2.328125 "></path>
+</symbol>
+</g>
+</defs>
+<g id="surface1">
+<g style="fill:rgb(0%,0%,0%);fill-opacity:1;">
+  <use xlink:href="#glyph0-1" x="53.183" y="13.067"></use>
+</g>
+<g style="fill:rgb(0%,0%,0%);fill-opacity:1;">
+  <use xlink:href="#glyph0-2" x="118.279" y="13.067"></use>
+  <use xlink:href="#glyph0-1" x="126.754682" y="13.067"></use>
+</g>
+<path style="fill:none;stroke-width:0.39848;stroke-linecap:butt;stroke-linejoin:miter;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;" d="M -3.99025 0.069875 L 42.935531 0.069875 " transform="matrix(1,0,0,-1,69.334,10.023)"></path>
+<path style="fill:none;stroke-width:0.39848;stroke-linecap:round;stroke-linejoin:round;stroke:rgb(0%,0%,0%);stroke-opacity:1;stroke-miterlimit:10;" d="M -2.071003 2.39132 C -1.692096 0.957726 -0.848346 0.278039 -0.00069 0.000695 C -0.848346 -0.280555 -1.692096 -0.956336 -2.071003 -2.38993 " transform="matrix(1,0,0,-1,112.46944,9.95382)"></path>
+<g style="fill:rgb(0%,0%,0%);fill-opacity:1;">
+  <use xlink:href="#glyph1-1" x="83.744" y="16.637"></use>
+</g>
+<g style="fill:rgb(0%,0%,0%);fill-opacity:1;">
+  <use xlink:href="#glyph2-1" x="88.87525" y="17.882"></use>
+</g>
+</g>
+</svg></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on January 11, 2019 at 18:57:28.
+  Last revised on January 14, 2019 at 06:19:29.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1745" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1745 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1746" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1746 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
