--- a/pages/20052.html
+++ b/pages/20052.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      measure theory in nLab
+      valuation (measure theory) in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      measure theory
+      valuation (measure theory)
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9457/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,6 +311,10 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
+<blockquote>
+<p>This page is about valuation in <a class="existingWikiWord" href="/nlab/show/measure+theory">measure theory</a>. For valuation in <a class="existingWikiWord" href="/nlab/show/algebra">algebra</a> (on <a class="existingWikiWord" href="/nlab/show/rings">rings</a>/<a class="existingWikiWord" href="/nlab/show/fields">fields</a>) see at <em><a class="existingWikiWord" href="/nlab/show/valuation">valuation</a></em>.</p>
+</blockquote>
+<hr />
 <div class="rightHandSide">
 <div class="toc clickDown" tabindex="0">
 <h3 id="context">Context</h3>
@@ -425,65 +429,35 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
-<li><a href='#history'>History</a></li>
-<li><a href='#some_subfields_and_applications'>Some subfields and applications</a></li>
-<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#examples'>Examples</a></li>
+<li><a href='#properties'>Properties</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
 
 <h2 id="idea">Idea</h2>
 
-<p>Measure theory studies <a class="existingWikiWord" href="/nlab/show/measurable+spaces">measurable spaces</a> and <a class="existingWikiWord" href="/nlab/show/measure+spaces">measure spaces</a>.</p>
+<p>(…)</p>
 
-<h2 id="history">History</h2>
+<h2 id="definition">Definition</h2>
 
-<p>Measure theory is the field of mathematics that grew out of the <a class="existingWikiWord" href="/nlab/show/Lebesgue+measure">Lebesgue integral</a> and Kolmogorov's axioms for <a class="existingWikiWord" href="/nlab/show/probability">probability</a>.</p>
+<p>(…)</p>
 
-<h2 id="some_subfields_and_applications">Some subfields and applications</h2>
+<h2 id="examples">Examples</h2>
 
-<p>The general measure theory studies general notions and constructions in measure theory, like the connection to integration, the measure spaces, derivation by measure, <span class="newWikiWord">Caratheodory construction<a href="/nlab/new/Caratheodory+construction">?</a></span> and so on.</p>
+<p>(…)</p>
 
-<p><a class="existingWikiWord" href="/nlab/show/probability+theory">Probability theory</a> studies special class of measures, so called <a class="existingWikiWord" href="/nlab/show/probability+measure">probability measure</a>s which are normalized to unity.</p>
+<h2 id="properties">Properties</h2>
 
-<p>Measure theory is very much having a central role in studying so called <a class="existingWikiWord" href="/nlab/show/ergodic+theory">ergodic theory</a> of dynamical system.</p>
-
-<p><a class="existingWikiWord" href="/nlab/show/geometric+measure+theory">Geometric measure theory</a> is the geometric study of measures of subsets of Euclidean space and the measure theoretic aspects of various geometric objects, like the integration of classes of currents and their extremization properties.</p>
-
-<p>There is a generalization, the noncommutative measure theory, which is more or less the study of <a class="existingWikiWord" href="/nlab/show/von+Neumann+algebra">von Neumann algebra</a>, see <a href="#Connes1995">Connes (1995)</a>.</p>
-
-<h2 id="related_concepts">Related concepts</h2>
-
-<ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/expectation+value">expectation value</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/valuation+%28measure+theory%29">valuation (measure theory)</a></p>
-</li>
-</ul>
+<p>(…)</p>
 
 <h2 id="references">References</h2>
 
-<ul>
-<li>
-<p>Ernst-Erich Doberkat, <em>Measures and all that — A Tutorial</em>, <a href="http://arxiv.org/abs/1409.2662">arxiv/1409.2662</a></p>
-</li>
-
-<li>
-<p id="Connes1995"><a class="existingWikiWord" href="/nlab/show/Alain+Connes">Alain Connes</a> (1995); <em><a class="existingWikiWord" href="/nlab/show/Noncommutative+Geometry">Noncommutative Geometry</a></em>.</p>
-</li>
-
-<li>
-<p>D.H. Fremlin (2001); <em>Measure Theory</em>; 5 volumes, <a href="http://www.essex.ac.uk/maths/people/fremlin/mt.htm">web</a>.</p>
-</li>
-</ul>
-
-<p>Discussion via <a class="existingWikiWord" href="/nlab/show/Boolean+toposes">Boolean toposes</a> is in</p>
+<p>See also</p>
 
 <ul>
-<li id="Henry14"><a class="existingWikiWord" href="/nlab/show/Simon+Henry">Simon Henry</a>, <em>Measure theory over boolean toposes</em>, Mathematical Proceedings of the Cambirdge Philosophical Society, 2016 (<a href="https://arxiv.org/abs/1411.1605">arXiv:1411.1605</a>)</li>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Valuation_(measure_theory)">Valuation (measure theory)</a></em></li>
 </ul>
 </body></html>
 
@@ -491,22 +465,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 14, 2019 at 06:12:18.
-  See the <a href="https://ncatlab.org/nlab/history/measure theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on January 14, 2019 at 06:15:50.
+  See the <a href="https://ncatlab.org/nlab/history/valuation (measure theory)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/measure+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/measure+theory/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/measure+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/measure+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/measure theory/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/valuation+%28measure+theory%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/valuation (measure theory)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/measure+theory" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/valuation+%28measure+theory%29" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/measure+theory" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/valuation+%28measure+theory%29" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/measure+theory" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/valuation+%28measure+theory%29" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
