--- a/pages/6409.html
+++ b/pages/6409.html
@@ -532,7 +532,7 @@ margin-left: 0em;
 <p>A <strong>valuation</strong> is a <a class="existingWikiWord" href="/nlab/show/function">function</a> on a <a class="existingWikiWord" href="/nlab/show/field">field</a> that provides a measure of size or multiplicity of elements of the field. They generalize to commutative <a class="existingWikiWord" href="/nlab/show/algebra">algebra</a> the notion of size inherent in consideration of the degree of a pole or multiplicity of a zero in <a class="existingWikiWord" href="/nlab/show/complex+analysis">complex analysis</a>, the degree of divisibility of a number by a prime number in number theory, and the geometrical concept of contact between two algebraic or analytic varieties in algebraic geometry.</p>
 </blockquote>
 
-<p>Sometimes one also discusses <em>exponential</em> (or <em>multiplicative</em>) <em>valuations</em> (also called valuation functions, and viewed as generalized <a class="existingWikiWord" href="/nlab/show/absolute+values">absolute values</a>) which look more like norms, and their equivalence classes, <a class="existingWikiWord" href="/nlab/show/place">place</a>s. See at <em><a class="existingWikiWord" href="/nlab/show/absolute+value">absolute value</a></em> for more on this common sense.</p>
+<p>Sometimes one also discusses <em>exponential</em> (or <em>multiplicative</em>) <em>valuations</em> (also called valuation functions, and viewed as generalized <a class="existingWikiWord" href="/nlab/show/absolute+values">absolute values</a>) which look more like <a class="existingWikiWord" href="/nlab/show/norms">norms</a>, and their <a class="existingWikiWord" href="/nlab/show/equivalence+classes">equivalence classes</a>, <a class="existingWikiWord" href="/nlab/show/places">places</a>. See at <em><a class="existingWikiWord" href="/nlab/show/absolute+value">absolute value</a></em> for more on this common sense.</p>
 
 <p>See also <a class="existingWikiWord" href="/nlab/show/discrete+valuation">discrete valuation</a> and <a class="existingWikiWord" href="/nlab/show/valuation+ring">valuation ring</a>.</p>
 
@@ -636,14 +636,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 14, 2019 at 06:10:26.
+  Last revised on January 14, 2019 at 08:49:50.
   See the <a href="https://ncatlab.org/nlab/history/valuation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/valuation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/valuation/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/valuation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/valuation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/valuation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/valuation/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/valuation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/valuation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/valuation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
